Move actions needed in progress window from 'win' to 'app'

--- a/share/gpodder/ui/adaptive/menus.ui
+++ b/share/gpodder/ui/adaptive/menus.ui
@@ -118,15 +118,15 @@
           <attribute name="label" translatable="yes">Open</attribute>
         </item>
         <item>
-          <attribute name="action">win.download</attribute>
+          <attribute name="action">app.download</attribute>
           <attribute name="label" translatable="yes">Download</attribute>
         </item>
         <item>
-          <attribute name="action">win.pause</attribute>
+          <attribute name="action">app.pause</attribute>
           <attribute name="label" translatable="yes">Pause</attribute>
         </item>
         <item>
-          <attribute name="action">win.cancel</attribute>
+          <attribute name="action">app.cancel</attribute>
           <attribute name="label" translatable="yes">Cancel</attribute>
         </item>
         <item>
@@ -279,7 +279,7 @@
         <attribute name="label" translatable="yes">Play</attribute>
       </item>
       <item>
-        <attribute name="action">win.download</attribute>
+        <attribute name="action">app.download</attribute>
         <attribute name="label" translatable="yes">Download</attribute>
       </item>
       <!-- Cancel -->
@@ -324,31 +324,31 @@
   <menu id="downloads-context">
     <section>
       <item>
-        <attribute name="action">win.download</attribute>
+        <attribute name="action">app.download</attribute>
         <attribute name="label" translatable="yes">Start download now</attribute>
       </item>
       <item>
-        <attribute name="action">win.pause</attribute>
+        <attribute name="action">app.pause</attribute>
         <attribute name="label" translatable="yes">Pause</attribute>
       </item>
       <item>
-        <attribute name="action">win.cancel</attribute>
+        <attribute name="action">app.cancel</attribute>
         <attribute name="label" translatable="yes">Cancel</attribute>
       </item>
     </section>
     <section>
       <item>
-        <attribute name="action">win.moveUp</attribute>
+        <attribute name="action">app.moveUp</attribute>
         <attribute name="label" translatable="yes">Move up</attribute>
       </item>
       <item>
-        <attribute name="action">win.moveDown</attribute>
+        <attribute name="action">app.moveDown</attribute>
         <attribute name="label" translatable="yes">Move down</attribute>
       </item>
     </section>
     <section>
       <item>
-        <attribute name="action">win.remove</attribute>
+        <attribute name="action">app.remove</attribute>
         <attribute name="label" translatable="yes">Remove from list</attribute>
       </item>
     </section>
