Add icon to clear URL in the add podcast dialog.

--- a/share/gpodder/ui/gtk/gpodderaddpodcast.ui
+++ b/share/gpodder/ui/gtk/gpodderaddpodcast.ui
@@ -80,6 +80,7 @@
                 <property name="can-focus">True</property>
                 <property name="has-focus">True</property>
                 <property name="activates-default">True</property>
+                <property name="secondary-icon-name">edit-clear</property>
                 <signal name="changed" handler="on_entry_url_changed" swapped="no"/>
               </object>
               <packing>
