--- a/share/gpodder/ui/adaptive/gpodder.ui
+++ b/share/gpodder/ui/adaptive/gpodder.ui
@@ -513,38 +513,13 @@
       <headerbar name="details_header_bar"/>
     </headerbars>
   </object>
-  <object class="GtkDialog" id="progress_window">
+  <object class="GtkWindow" id="progress_window">
     <property name="can-focus">False</property>
-    <property name="type-hint">dialog</property>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
-        <child internal-child="action_area">
-          <object class="GtkButtonBox">
-            <property name="can-focus">False</property>
-            <property name="layout-style">end</property>
-            <child>
-              <object class="GtkButton" id="progress_close_button">
-                <property name="label" translatable="yes">Close</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <signal name="clicked" handler="on_progress_close_button_clicked" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
@@ -660,6 +635,7 @@
                   <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
+                    <property name="margin-start">5</property>
                     <property name="spacing">5</property>
                     <child>
                       <object class="GtkCheckButton" id="cbLimitDownloads">
@@ -715,6 +691,7 @@
                   <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
+                    <property name="margin-start">5</property>
                     <property name="spacing">5</property>
                     <child>
                       <object class="GtkCheckButton" id="cbMaxDownloads">
@@ -764,6 +741,32 @@
           <packing>
             <property name="expand">True</property>
             <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButtonBox">
+            <property name="can-focus">False</property>
+            <property name="margin-end">5</property>
+            <property name="margin-bottom">5</property>
+            <property name="layout-style">end</property>
+            <child>
+              <object class="GtkButton" id="progress_close_button">
+                <property name="label" translatable="yes">Close</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_progress_close_button_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">1</property>
           </packing>
         </child>
