adaptive/menus.ui: Sync with master

--- a/share/gpodder/ui/adaptive/menus.ui
+++ b/share/gpodder/ui/adaptive/menus.ui
@@ -273,6 +273,7 @@
     </section>
   </menu>
   <menu id="episodes-context">
+    <section>
       <item>
         <attribute name="action">win.play</attribute>
         <attribute name="label" translatable="yes">Play</attribute>
@@ -281,10 +282,12 @@
         <attribute name="action">win.download</attribute>
         <attribute name="label" translatable="yes">Download</attribute>
       </item>
+      <!-- Cancel -->
       <item>
         <attribute name="action">win.delete</attribute>
         <attribute name="label" translatable="yes">Delete</attribute>
       </item>
+    </section>
     <!-- Extensions -->
     <!-- Send To -->
     <section>
@@ -319,6 +322,7 @@
     </item>
   </menu>
   <menu id="downloads-context">
+    <section>
       <item>
         <attribute name="action">win.download</attribute>
         <attribute name="label" translatable="yes">Start download now</attribute>
@@ -331,6 +335,7 @@
         <attribute name="action">win.cancel</attribute>
         <attribute name="label" translatable="yes">Cancel</attribute>
       </item>
+    </section>
     <section>
       <item>
         <attribute name="action">win.moveUp</attribute>
