Add menu item to open logs folder.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -20,6 +20,10 @@
     </section>
     <section>
       <item>
+        <attribute name="label" translatable="yes">Open Logs</attribute>
+        <attribute name="action">app.logs</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">Help</attribute>
         <attribute name="action">app.help</attribute>
       </item>
