Add 'Preview' item to download item context menu

--- a/share/gpodder/ui/adaptive/menus.ui
+++ b/share/gpodder/ui/adaptive/menus.ui
@@ -324,6 +324,10 @@
         <attribute name="label" translatable="yes">Start download now</attribute>
       </item>
       <item>
+        <attribute name="action">app.preview_from_downloads</attribute>
+        <attribute name="label" translatable="yes">Preview</attribute>
+      </item>
+      <item>
         <attribute name="action">app.pause</attribute>
         <attribute name="label" translatable="yes">Pause</attribute>
       </item>
