--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -179,13 +179,22 @@
           <attribute name="accel">&lt;Primary&gt;t</attribute>
         </item>
         <item>
-          <attribute name="action">win.showEpisodeDescription</attribute>
-          <attribute name="label" translatable="yes">Episode descriptions</attribute>
-          <attribute name="accel">&lt;Primary&gt;d</attribute>
-        </item>
-        <item>
           <attribute name="action">win.searchAlwaysVisible</attribute>
           <attribute name="label" translatable="yes">Always show Find entries</attribute>
+        </item>
+      </section>
+      <section>
+        <item>
+          <attribute name="action">win.viewHideBoringPodcasts</attribute>
+          <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowAllEpisodes</attribute>
+          <attribute name="label" translatable="yes">"All episodes" in podcast list</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowPodcastSections</attribute>
+          <attribute name="label" translatable="yes">Use sections for podcast list</attribute>
         </item>
       </section>
       <section>
@@ -216,12 +225,13 @@
       </section>
       <section>
         <item>
-          <attribute name="action">win.viewHideBoringPodcasts</attribute>
-          <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
-        </item>
-        <item>
           <attribute name="action">win.viewAlwaysShowNewEpisodes</attribute>
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.showEpisodeDescription</attribute>
+          <attribute name="label" translatable="yes">Episode descriptions</attribute>
+          <attribute name="accel">&lt;Primary&gt;d</attribute>
         </item>
         <item>
           <attribute name="action">win.viewCtrlClickToSortEpisodes</attribute>
