Add setting to disable trimming episode title prefix.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -229,6 +229,10 @@
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
         </item>
         <item>
+          <attribute name="action">win.viewTrimEpisodeTitlePrefix</attribute>
+          <attribute name="label" translatable="yes">Trim episode title prefix</attribute>
+        </item>
+        <item>
           <attribute name="action">win.viewShowEpisodeDescription</attribute>
           <attribute name="label" translatable="yes">Episode descriptions</attribute>
           <attribute name="accel">&lt;Primary&gt;d</attribute>
