Rename showEpisodeDescription's internal names to match other items.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -229,7 +229,7 @@
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
         </item>
         <item>
-          <attribute name="action">win.showEpisodeDescription</attribute>
+          <attribute name="action">win.viewShowEpisodeDescription</attribute>
           <attribute name="label" translatable="yes">Episode descriptions</attribute>
           <attribute name="accel">&lt;Primary&gt;d</attribute>
         </item>
