Allow channel to be selected from both episode menus.
Closes #1170.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -149,6 +149,10 @@
           <attribute name="action">win.openEpisodeDownloadFolder</attribute>
           <attribute name="label" translatable="yes">Open download folder</attribute>
         </item>
+        <item>
+          <attribute name="action">win.selectChannel</attribute>
+          <attribute name="label" translatable="yes">Select channel</attribute>
+        </item>
       </section>
       <section>
         <item>
