--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -246,6 +246,10 @@
           <attribute name="label" translatable="yes">Show episode released time</attribute>
         </item>
         <item>
+          <attribute name="action">win.viewRightAlignEpisodeReleasedColumn</attribute>
+          <attribute name="label" translatable="yes">Right align episode released column</attribute>
+        </item>
+        <item>
           <attribute name="action">win.viewCtrlClickToSortEpisodes</attribute>
           <attribute name="label" translatable="yes">Require control click to sort episodes</attribute>
         </item>
