Add forceDownload action, use it in Downloads context menu
By @auouymous.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -390,7 +390,7 @@
     <section>
       <attribute name="display-hint">horizontal-buttons</attribute>
       <item>
-        <attribute name="action">win.download</attribute>
+        <attribute name="action">win.forceDownload</attribute>
         <attribute name="label" translatable="yes">Start download now</attribute>
         <attribute name="verb-icon">document-save-symbolic</attribute>
       </item>
